<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activity.AddTaskActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">

        <EditText
            android:id="@+id/edt_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:hint="@string/title_name_task"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <ImageButton
            android:id="@+id/btn_add_date"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ImageButton"
            android:src="@drawable/ic_date_range"/>

        <TextView
            android:id="@+id/txt_add_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="@string/title_task_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageButton
            android:id="@+id/btn_add_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ImageButton"
            android:src="@drawable/ic_time"/>

        <TextView
            android:id="@+id/txt_add_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="@string/title_task_time"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="30dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@android:color/background_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edt_add_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:hint="@string/title_task_desc"
                    android:inputType="textMultiLine|textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_task"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/title_add_task"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>